@@ -1197,12 +1197,13 @@ input#title {
 	font-family: $serif;	
 }
 textarea#description {
-    width: 99%;
-    font-family: $sans-serif;
-    color: #000;   
-    padding: 2px; 
-    font-size: $base-size;
-    line-height: 1.25;
+	width: 99%;
+	font-family: $sans-serif;
+	color: #000;
+	padding: 2px;
+	font-size: $base-size;
+	line-height: 1.25;
+	height: 3.5em;
 }
 .suppressVisualEditor {
 	display: none;
